# wfes2

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  conda-env-linux.yaml  conda-env-macos.yaml  makefile
doc/: manual.org
include/: DenseMatrix.hpp  MKL_Const.hpp  MoveOnly.hpp  NumericMatrix.hpp  NumericVector.hpp  NumericVectorBase.hpp  PardisoSolver.hpp  SparseMatrix.hpp  Vector.hpp  VectorBase.hpp  WSMPSolver.hpp  WrightFisher.hpp  WrightFisherElementary.hpp  args.hpp  common.hpp  parsing.hpp  rdist.hpp  util.hpp
src/: MoveOnly.cpp  PardisoSolver.cpp  SparseMatrix.cpp  WSMPSolver.cpp  WrightFisher.cpp  WrightFisherElementary.cpp  main.cpp  parsing.cpp  phase_type_dist.cpp  phase_type_moments_exe.cpp  test_exe.cpp  time_dist.cpp  time_dist_dual.cpp  time_dist_sgv.cpp  time_dist_skip.cpp  util.cpp  wfafle.cpp  wfafle_exe.cpp  wfafs_deterministic.cpp  wfafs_stochastic.cpp  wfas.cpp  wfes_sequential.cpp  wfes_single.cpp  wfes_single_exe.cpp  wfes_soft_exe.cpp  wfes_sweep.cpp  wfes_sweep_exe.cpp  wfes_switching.cpp  wfes_switching_exe.cpp  wfes_test.cpp
src/exe/: wfes_phase_type_dist.cpp  wfes_single.cpp
src/lib/: PardisoSolver.cpp  SparseMatrix.cpp  WrightFisher.cpp  WrightFisherElementary.cpp  parsing.cpp  rdist.cpp  util.cpp
static_build/: makefile  wsmp.lic
test/: wfes_test.sh
